# fresh-frozen

./: README.md  main.py  model.py  model_test.ipynb  pyproject.toml
