[project]
name = "fresh-frozen"
version = "0.1.0"
description = "Electric cable defect detection project for Advanced Vision Algorithms course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=3.0.1",
    "pillow>=12.2.0",
    "plotly>=6.6.0",
    "rerun>=1.0.31",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
]
